    * lang/czech: Reordered some words.
    * libraries/select_server.lib.php: Clickable active server in left frame
      (RFE # 1044678).
    * db_details_structure.php, tbl_move_copy.php, libraries/common.lib.php:
      Fix left frame reloading after dropping table (bug #1034531).
    * config.inc.php, libraries/config_import.lib.php: Offer UNIX_TIMESTAMP
      also for numeric fields.

2004-10-17 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to boralioglu.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.

2004-10-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php: support for compressed protocol
      and CLIENT_LOCAL_FILES in mysqli

2004-10-15 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php: new way to define font path,
      needed with the new fpdf library; also now output inline,
      I find it faster this way, please tell me if you prefer
      the old dialog method and why.
    * tbl_change.php: bug #1038401, tabbing from value to value
    * sql.php: detect this case:
      SELECT DISTINCT x AS foo, y AS bar FROM sometable
      and count rows correctly (in MySQL 3),
      thanks to Matthias Pigulla (mp@webfactory.de)
    * server_privileges.php: cosmetic: title for Edit privileges
    * lang/galician: Updated, thanks to Xosé Calvo.
    * lang/italian: Updates, thanks to Pietro Danesi
    * lang/norwegian: Update, thanks to Sven-Erik Andersen

2004-10-13 Michal Čihař  <michal@cihar.com>
    * libraries/fpdf/fpdf.php: Updated to 1.52.

2004-10-13 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Mike Beck's e-mail address has changed.

2004-10-13 Michal Čihař  <michal@cihar.com>
    * lang/sync_lang.sh: Do not overwrite utf-8 files in some cases.
    * lang/czech: Fix some translations.
    * libraries/transformations/text_plain__external.inc.php: Handle better
      backslash.
    * themes/*/img/*.gif: Remove unused gif images.
